readme and title screen

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </header>
 
       <main id="main">
+        <dialog id="titleScreen"><button id="startButton">READY</button></dialog>
         <div id="question">
           <h3 id="questionText">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
