changed to initials instead of name

--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
       <input
         type="text"
         id="highScoreName"
-        placeholder="Name"
+        placeholder="Initials"
         rows="1"
+        maxlength="3"
         autofocus
       />
       <button id="highScoreConfirm" class="button">confirm</button>
