--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="./assets/style.css" type="text/css" rel="stylesheet" />
+    <link href="./assets/css/style.css" type="text/css" rel="stylesheet" />
     <title>JavaScript Quiz</title>
   </head>
   <body>
@@ -84,6 +84,6 @@
       <button id="highScoreConfirm" class="button">confirm</button>
     </div>
   </dialog>
-  <script src="./assets/questions.js"></script>
-  <script src="./assets/script.js"></script>
+  <script src="./assets/js/questions.js"></script>
+  <script src="./assets/js/script.js"></script>
 </html>
