Revert "fixed css and fade function"
This reverts commit c81ade2f7bc0b917c0239d12f96a6fa07e939839.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </header>
 
       <main id="main">
-        <dialog id="titleScreen"><button id="startButton">READY</button><table id="highScores"></table></dialog>
+        <dialog id="titleScreen"><button id="startButton" class="choice button">READY</button><table id="highScores"></table></dialog>
         <div id="question">
           <h3 id="questionText">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
@@ -27,7 +27,7 @@
             odio consectetur voluptatibus?
           </h3>
         </div>
-        <div id="scoreBuzzer"></div>
+
         <div id="answerText">
           <ol>
             <li id="answerTextA" class="answerText"></li>
@@ -63,7 +63,14 @@
           </button>
         </div>
       </main>
+      <aside id="aside">
+        <div id="scoreContainer">
+          <!--SCORE <span id="scoreDisplay"></span> -->
+          <div id="scoreBuzzer"></div>
+        </div>
 
+        
+      </aside>
       <footer id="footer">"how is a raisin like a writing desk?"</footer>
     </div>
   </body>
