--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
       <input
         type="text"
         id="highScoreName"
-        placeholder="Initials"
+        placeholder="Name"
         rows="1"
-        maxlength="3"
         autofocus
       />
       <button id="highScoreConfirm" class="button">confirm</button>
