Revert "fixed timer to spec"
This reverts commit ca847090879a42ae0a9276ba1987c0694d4ba406.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </header>
 
       <main id="main">
-        <dialog id="titleScreen"><button id="startButton" class="choice button">READY</button><table id="highScores"></table></dialog>
+        <dialog id="titleScreen"><button id="startButton">READY</button></dialog>
         <div id="question">
           <h3 id="questionText">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
@@ -65,11 +65,11 @@
       </main>
       <aside id="aside">
         <div id="scoreContainer">
-          <!--SCORE <span id="scoreDisplay"></span> -->
+          SCORE <span id="scoreDisplay"></span>
           <div id="scoreBuzzer"></div>
         </div>
 
-        
+        <table id="highScores"></table>
       </aside>
       <footer id="footer">"how is a raisin like a writing desk?"</footer>
     </div>
